同言网第三次改动
差图片上传功能和模板改动测试，还有需要在学校课程页面加一个学生报学校入口(按钮或其它都行)

--- a/htdocs/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/htdocs/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -1950,6 +1950,11 @@ newadmin_forSchool:
     permissions: [newadmin_foSchool_manager]
 
 #学校#
+newadmin_school_show:
+    pattern:  newadmin/{id}/school/show
+    defaults: { _controller: TopxiaAdminBundle:Background:schoolShow }
+    permissions: [admin]
+
 newadmin_registersc:
     pattern:  /registersc
     defaults: { _controller: TopxiaAdminBundle:Background:registersc }
