同言网第六次提交
登录和注册用了新的模板和控制器，原来的页面应同言要求隐藏，给他们个路径登录就行，改了安全配置文件测试注册登录跳转功能成功。首页其它人群分类已加好显示数据

--- a/htdocs/src/Topxia/AdminBundle/Resources/config/routing.yml
+++ b/htdocs/src/Topxia/AdminBundle/Resources/config/routing.yml
@@ -2069,3 +2069,13 @@ newadmin_school_uploadSpe_crop:
     pattern:  /newadmin/school/{id}/uploadSpe/crop
     defaults: { _controller: TopxiaAdminBundle:Background:uploadSpeCrop }
 
+newadmin_school_uploadSch:
+    pattern:  /newadmin/school/{id}/uploadSch
+    defaults: { _controller: TopxiaAdminBundle:Background:uploadSch }
+
+newadmin_school_uploadSch_crop:
+    pattern:  /newadmin/school/{id}/uploadSch/crop
+    defaults: { _controller: TopxiaAdminBundle:Background:uploadSchCrop }
+
+
+
