改了学生报名部分和后台课程添加，再需要更改学校上传图片模块

--- a/htdocs/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
+++ b/htdocs/src/Topxia/AdminBundle/Resources/config/menus_admin.yml
@@ -622,6 +622,10 @@ admin:
                         #admin_setting_theme:
                         #    name: 主题
                          #   disable: true
+                        admin_coursesc_manager:
+                            name: 首页课程分类
+                            router_name: admin_coursesc   
+                            disable: true
                         admin_setting_mailer:
                             name: 邮件服务器设置
                             disable: true
